reworked email stemplate selection to make it futureproof (thanks alpha...)

--- a/changelog.txt
+++ b/changelog.txt
@@ -188,3 +188,4 @@
 -updated gee's, sandy's calendar numbers
 - took leo out of tech locations due to holidays
 - chganged ozgurs tech locations
+- reworked email selection in quick emails
