--- a/changelog.txt
+++ b/changelog.txt
@@ -193,3 +193,4 @@
 1.0884
 - imporved map display code in import job - improved consistancy, may need further work
 - reverted changes in eds abscence
+- reverted changes due to leos abscence
