--- a/changelog.txt
+++ b/changelog.txt
@@ -292,6 +292,10 @@
 1.0920
 - changed eds jobs
 
+1.0921
+- changed matts jobs to 5/1, 
+- changed vinis area to remove sutherland
+
 
 TODO
 - doublecheck parts recieved code to ensure correct day is picked
