--- a/changelog.txt
+++ b/changelog.txt
@@ -515,5 +515,20 @@
 - added gas cooktops to andrews exclusion list
 - changed leos area to remove mosman and cremorne
 
+1.0981
+- upped andrews jobs to 5/3
+
+1.0982
+- added binod to  calendar.
+- removed ozgur from tech table and set jobs to zero
+- same for andrew
+
+1.0983
+- changed benji's start time to 7:30
+
+1.0984
+- added all office staff to calendar
+- changed a few techs to 0/0
+
 TODO
 - doublecheck parts recieved code to ensure correct day is picked
