--- a/changelog.txt
+++ b/changelog.txt
@@ -633,3 +633,6 @@ moved gee i guess?
 
 1.1006
 - updated dylans jobs  to 5/3
+
+1.1007
+- added kobe to calendar, added several qld postcodes to list
